Displays results from soundcloud search. Now I need to allow the user to select an option.

--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -246,7 +246,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Results</div>
         <div class="list-group" id="song-list">
-          {{#each song_option}}
+          {{#each song_options}}
             {{>show_song_option}}
           {{/each}}
         </div>
