undefined field value bug fixed

--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -59,10 +59,10 @@
           <td style="vertical-align: top; font-size: 22pt;">
           <b><div> {{name}} </div></b>
           </td><td style="text-align: right; vertical-align: top; width: 40%;">
-          <div> {{loc}} </div>
+          <div> {{location}} </div>
           <div> {{date}} </div>
           <div>
-            <span> {{timeStart}} </span> &#8212; <span> {{timeEnd}} </span>
+            <span> {{start}} </span> &#8212; <span> {{end}} </span>
           </div>
           </td></tr></table></li>
           {{/each}}
