Search finally works properly. Thank goodness. Collections does not behave predictably, though, which is frustrating.

--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -246,6 +246,7 @@
     <div class="col-sm-9">
       <div class="panel panel-default">
         <div class="panel-heading">Results</div>
+        <div class="panel-body">Please select one, or search again.</div>
         <div class="list-group" id="song-list">
           {{#each song_options}}
             {{>show_song_option}}
