Made load song more stable

--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -207,8 +207,8 @@
 {{else}}
   <div class="row">
     <div class="col-sm-9">
-      <audio controls style="width:700px; padding-bottom:2em; padding-bottom:1em; padding-top:1em;">
-        <source src= "{{stream_url}}">
+      <audio id="player" controls style="width:700px; padding-bottom:2em; padding-bottom:1em; padding-top:1em;">
+        <source id="current_song" src= "{{stream_url}}">
       </audio>
     </div>
   </div>  
