--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -381,7 +381,7 @@
   
 
 <template name="display_move">
-  <a class="list-group-item move {{maybe_active}}" id="{{_id}}-m"> <b> {{title}}</b> 
+  <a class="list-group-item move {{maybe_active}}" id="{{_id}}-m"> <b> {{name}}</b> 
   {{#if edit_mode}}
     <div class="pull-right edit">
       <span class="glyphicon glyphicon-pencil" id="{{_id}}-m-pencil" style="padding-right:0.5em;"></span>
