--- a/wushumushu/client/wushumushu.html
+++ b/wushumushu/client/wushumushu.html
@@ -381,14 +381,14 @@
   
 
 <template name="display_move">
-  <a class="list-group-item move {{maybe_active}}" id="{{_id}}-m"> <b> {{name}}</b> 
+  <a class="list-group-item move {{maybe_active}}" id="{{_id}}-m"> <b> {{title}}</b> 
   {{#if edit_mode}}
     <div class="pull-right edit">
       <span class="glyphicon glyphicon-pencil" id="{{_id}}-m-pencil" style="padding-right:0.5em;"></span>
       <span class="glyphicon glyphicon-remove" id="{{_id}}-m-remove" ></span>
     </div>
   {{/if}}
-  <br> {{info}}
+  <br> {{description}}
   </a>
 </template>
 
@@ -398,13 +398,13 @@
     <div class="form-group edit" style="padding-top:0.5em;">
       <label for="update-move-title" class="col-sm-2 control-label">Title</label>
        <div class="col-sm-10"> 
-        <input class="form-control" id="update-move-title" placeholder="{{name}}"/>   
+        <input class="form-control" id="update-move-title" placeholder="{{title}}"/>   
        </div>
     </div>
     <div class="form-group edit">
       <label for="update-move" class="col-sm-2 control-label">Moves</label>
        <div class="col-sm-10"> 
-        <textarea class="form-control" id="update-move" rows="3" placeholder="{{info}}"></textarea>
+        <textarea class="form-control" id="update-move" rows="3" placeholder="{{description}}"></textarea>
        </div>
     </div>         
     <div class="form-group edit">
